Header Inners estilizados

--- a/HomePage1/index.html
+++ b/HomePage1/index.html
@@ -12,14 +12,16 @@
 <body>
 
     <header>
-        <section class="logo">Your Logo</section>
-            <nav>
-                <ul>
-                    <li><a href="#"></a>Sobre nós</li>
-                    <li><a href="#"></a>Promoções</li>
-                    <li><a href="#"></a>Novidades</li>
-                </ul>
-        </nav>
+        <div class="container">
+            <section class="logo">Your Logo</section>
+                <nav>
+                    <ul>
+                        <li><a href="#">Sobre nós</a></li>
+                        <li><a href="#">Promoções</a></li>
+                        <li><a href="#">Novidades</a></li>
+                    </ul>
+            </nav>
+        </div>
     </header>
     
 </body>
