Estilizando a logo com html e css

--- a/HomePage1/index.html
+++ b/HomePage1/index.html
@@ -12,8 +12,14 @@
 <body>
 
     <header>
+
         <div class="container">
-            <section class="logo">Your Logo</section>
+            <section class="logo">
+                <Strong>Your</Strong>
+                <span class="dot"></span> 
+                <span>Logo</span>
+            </section>
+
                 <nav>
                     <ul>
                         <li><a href="#">Sobre nós</a></li>
@@ -21,7 +27,9 @@
                         <li><a href="#">Novidades</a></li>
                     </ul>
             </nav>
+
         </div>
+        
     </header>
     
 </body>
